--- a/TemplateConan/presentacion.tex
+++ b/TemplateConan/presentacion.tex
@@ -1,6 +1,6 @@
 \documentclass[aspectratio=169,11pt]{beamer}
 % Aspect ratio:
-% 610 => 16:10 
+% 610 => 16:10
 % 169 => 16:9 (Mas común actualmente)
 % 149 => 14:9
 %  54 => 5:4
@@ -18,12 +18,12 @@
 \usepackage{anyfontsize}
 
 % Los símbolos el los conjuntos numéricos
-\usepackage{amssymb} 
+\usepackage{amssymb}
 
- % Incluir imágenes
+% Incluir imágenes
 \usepackage{graphicx}
 % Poder usar subfiguras
-\usepackage{subcaption} 
+\usepackage{subcaption}
 % Para presentaciones usualmente no necesitamos la primer parte del caption
 \captionsetup[figure]{labelformat=empty}
 \captionsetup[subfigure]{labelformat=empty}
@@ -40,28 +40,22 @@
 
 % Crear un comando para el email
 \newcommand{\email}[1]{
-    \texttt{
-      \href{mailto:#1}{#1}
-    }
+	\texttt{
+		\href{mailto:#1}{#1}
+	}
 }
 
 % Construyendo la diapositiva de titulo
 \title[La torre del elefante]{La torre del elefante}
 \subtitle{de Robert E. Howard}
 \author[Nemediano]{Análisis de una historia de Conan por Nemediano}
-\institute[La espada de Almuric]{
-%     email for contact
-    \normalsize{\email{nemediano@gmail.com}}
-%    university name
-%    \unam
+\institute[El baúl de Howard]{
+	%     email for contact
+	\normalsize{\email{https://nemediano.github.io/canalREH/conan/la-torre-del-elefante}}
+	%    university name
+	%    \unam
 }
 \date{}
-%\date[Noviembre 2023] % (optional)
-%{Congreso Nacional de Software Libre, Abril 2021}
-%\titlegraphic{\includegraphics[width=1.7cm]{img/escudo-a}}
-
-% Para que el logo parezca en todas las diapositivas
-%\logo{\includegraphics[height=1cm]{img/escudo-a}}
 
 \usetheme{AnnArbor}
 \useinnertheme{circles}
@@ -70,6 +64,21 @@
 \setbeamercolor{block title alerted}{fg=white,bg=red}
 \setbeamercolor{alerted text}{fg=red}
 
+% Definición de colores especiales
+\definecolor{amarilloCanal}{RGB}{253, 246, 227}
+\definecolor{grisFuentes}{RGB}{101, 123, 131}
+\definecolor{azulLinks}{RGB}{38, 139, 210}
+
+\setbeamercolor{frametitle}{fg=azulLinks,bg=amarilloCanal}
+\setbeamercolor{title}{fg=azulLinks,bg=amarilloCanal}
+\setbeamercolor{title in head/foot}{fg=grisFuentes,bg=amarilloCanal}
+\setbeamercolor{subsection in head/foot}{fg=grisFuentes,bg=amarilloCanal}
+\setbeamercolor{section in head/foot}{fg=grisFuentes,bg=amarilloCanal}
+\setbeamercolor{author in head/foot}{fg=grisFuentes,bg=amarilloCanal}
+%\setbeamercolor{institute in head/foot}{fg=azulLinks,bg=amarilloCanal}
+%\setbeamercolor{page number in head/foot}{fg=grisFuentes,bg=amarilloCanal}
+\setbeamercolor{date in head/foot}{fg=grisFuentes,bg=amarilloCanal}
+
 % Pongo linkcolor vacío para que los links internos no tengan color
 % Solo los links externos tienen color
 \hypersetup{colorlinks,linkcolor=,urlcolor=blue}
@@ -77,9 +86,37 @@
 \setbeamertemplate{caption}{\insertcaption}
 \beamertemplatenavigationsymbolsempty
 
+\usepackage{pgfpages} % Lo requiere el generador de notas
+
+% Para generar un pdf con presentacion y notas que puedes presentar usando SW especializado (pymPress)
+\setbeameroption{show notes on second screen=right} %Para generar un pdf imprimible con notas
+\setbeamertemplate{note page}[plain]
+\setbeamerfont{note page}{size=\footnotesize}
+
+%\AtBeginSection[]{
+%	\begin{frame}
+%		\vfill
+%		\centering
+%		\begin{beamercolorbox}[sep=8pt,center,shadow=true,rounded=true]{title}
+%			\usebeamerfont{title}\insertsectionhead\par%
+%		\end{beamercolorbox}
+%		\vfill
+%	\end{frame}
+%}
+
+\AtBeginSection[]
+{
+	\begin{frame}
+		\vfill
+		\centering
+		\tableofcontents[currentsection]
+	\end{frame}
+}
+
+
 \begin{document}
 
-% El contenido de la presentación esta en este otro archivo
-\input{contenido}
+	% El contenido de la presentación esta en este otro archivo
+	\input{contenido}
 
 \end{document}
