--- a/TemplatePost/2023-12-15-the-title.md
+++ b/TemplatePost/2023-12-15-the-title.md
@@ -14,8 +14,7 @@ seo_title: La torre del elefante - Conan - Robert E. Howard - Análisis literari
 
 seo_description: La torre del elefante es una historia de Conan el bárbaro escrita por Robert E. Howard (REH). Este es un analisis literario en español de ésta obra. Cabe mencionar que La torre del elefante es considerada un relato clásico de Conan y una de los mejores cuentos tanto de este ciclo como de la obra de REH en general.
 
-#permalink: la-torre-del-elefante
-
+# YYYY-MM-DD
 date: 2023-12-14
 
 last_modified_at: 2023-12-22
@@ -52,7 +51,33 @@ Si solo se cuentan historias publicadas en la vida de REH, son 18 (o 17 dependie
 
 Si se añaden la historias que fueron rechazadas por los editores durante la vida de REH, y luego publicadas después de su muerte; así como fragmentos que el autor dejó inconclusos y que fueron --muchos años después-- terminados y publicados por otros autores, ahí la cuenta sube a 25.
 
-![Orden de publicacion]({{ site.baseurl }}/static/images/conan/torreElefante/OrdenPublicacion.png "Orden de publicación")
+| Orden | Titulo | Fecha |
+| --: | :-- | --: |
+| 1 | El Fénix en la espada | Diciembre 1932 |
+| 2 | La ciudadela escarlata | Enero 1933 |
+| **_3_** | **_La torre del elefante_** | **_Marzo 1933_** |
+| 4 | Coloso negro | Junio 1933 |
+| 5 | Xuthal del crepusculo | Septiembre 1933 |
+| 6 | El estanque del negro | Octobre 1933 |
+| 7 | Villanos en la casa | Enero 1934 |
+| 8 | La hija del gigante helado | Marzo 1934 |
+| 9 | Sombras de hierro a la luz de la luna | Abril 1934 |
+| 10 | Reina de la costa negra | Mayo 1934 |
+| 11 | El diablo de hierro | Agosto 1934 |
+| 12 | La gente del círculo negro | Noviembre 1934 |
+| 13 | Nacerá una bruja | Diciembre 1934 |
+| 14 | Los sirvientes de Bit-Yakin | Marzo 1935 |
+| 15 | Más allá del río negro | Junio 1935 |
+| 16 | Los antropófagos de Zamboula | Noviembre 1935 |
+| 17 | La hora del dragón  | Abril 1936 |
+| 18 | Clavos rojos | October 1936 |
+| 19 | El dios en el cuenco | September 1952 |
+| 20 | El negro desconocido | Febrero 1953 |
+| 21 | Tambores de Tombalku | 1966 |
+| 22 | La sala de los muertos | Febrero 1967 |
+| 23 | El valle de la mujeres perdidas | Marzo 1967 |
+| 24 | La mano de Nergal | Enero 1967 |
+| 25 | El hocico en al obscuridad | Enero 1969 |
 
 Como puede verse ésta historia es la tercera historia de Conan en ser publicada y de acuerdo a sus biógrafos la cuarta en ser escrita.
 
@@ -69,7 +94,9 @@ De las otras obras originales de REH anteriores en la cronología dos no son cue
 El ensayo *La era Hiboria* y el poema *Cimeria*.
 Finalmente a la única historia que la antecee: *La hija del gigante helado* a veces se le disputa su *status* de historia de Conan.
 
-![Orden en la cronología]({{ site.baseurl }}/static/images/conan/torreElefante/Cronologias.png "Orden en la cronología")
+| | Orden de escritura | Dale Rippke | Joe Marek | L. Sprague de Camp | Robert Jordan | William Galeb Gray |
+| :-- | :-: | :-: | :-: | :-: | :-: | :-: |
+| La torre del elefante | 4 | 3 | 4 | 4 | 4 | 9 |
 
 ## Resumen
 
